@@ -1,3 +1,8 @@
+2003-06-26  David N. Welton  <davidw@dedasys.com>
+
+	* bridge.tcl: Large reworking by Aaron Faupell.
+	* chat.tcl:   Lots of changes here too.
+
 2003-02-28  David N. Welton  <davidw@dedasys.com>
 
 	* bridge.tcl: Add changes from Kristoffer Lawson
